--- a/example.xfce4rc.in
+++ b/example.xfce4rc.in
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
 <Xfce>
+  <Panel groups="10"/>
   <Groups>
     <Group>
       <Popup>
@@ -120,7 +121,7 @@
     <Group>
       <Popup/>
       <Control id="-1" filename="libclock.so">
-        <XfceClock Clock_type="1" Toggle_military="1" Toggle_am_pm="0" Toggle_secs="1"/>
+        <XfceClock Clock_type="1" Toggle_military="0" Toggle_am_pm="1" Toggle_secs="0"/>
       </Control>
     </Group>
   </Groups>
