Split graphical pager out from switcher plugin. Add it to the default configuration
(Old svn revision: 3558)

--- a/configure.ac
+++ b/configure.ac
@@ -104,6 +104,7 @@ plugins/mailcheck/Makefile
 plugins/clock/Makefile
 plugins/switcher/Makefile
 plugins/systembuttons/Makefile
+plugins/pager/Makefile
 settings/Makefile
 themes/Makefile
 themes/Crystal/Makefile
