--- a/example.xfce4rc.in
+++ b/example.xfce4rc.in
@@ -88,7 +88,7 @@
     </Group>
     <Group>
       <Popup/>
-      <Control id="-1" filename="libswitcher.so" graphical="0"/>
+      <Control id="-1" filename="libpager.so"/>
     </Group>
     <Group>
       <Popup/>
@@ -105,7 +105,7 @@
     <Group>
       <Popup/>
       <Control id="-2">
-        <Command term="0">xfprint</Command>
+        <Command term="0">lpr</Command>
         <Tooltip>Drag file to print</Tooltip>
         <Icon id="9"/>
       </Control>
