--- a/plugins/Makefile.in
+++ b/plugins/Makefile.in
@@ -160,7 +160,8 @@ SUBDIRS = \
 clock \
 mailcheck \
 switcher \
-systembuttons
+systembuttons \
+pager
 
 subdir = plugins
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
