--- a/plugins/systembuttons/Makefile.in
+++ b/plugins/systembuttons/Makefile.in
@@ -159,7 +159,7 @@ target_alias = @target_alias@
 plugindir = $(pkglibdir)/plugins
 
 plugin_LTLIBRARIES = libsystembuttons.la
-libsystembuttons_la_LDFLAGS = "-module"
+libsystembuttons_la_LDFLAGS = "-module -avoid-version"
 
 libsystembuttons_la_SOURCES = \
 systembuttons.c
