--- a/plugins/clock/Makefile.in
+++ b/plugins/clock/Makefile.in
@@ -159,7 +159,7 @@ target_alias = @target_alias@
 plugindir = $(pkglibdir)/plugins
 
 plugin_LTLIBRARIES = libclock.la
-libclock_la_LDFLAGS = "-module"
+libclock_la_LDFLAGS = "-module -avoid-version"
 
 libclock_la_SOURCES = \
 clock.c
