--- a/plugins/mailcheck/Makefile.in
+++ b/plugins/mailcheck/Makefile.in
@@ -159,7 +159,7 @@ target_alias = @target_alias@
 plugindir = $(pkglibdir)/plugins
 
 plugin_LTLIBRARIES = libmailcheck.la
-libmailcheck_la_LDFLAGS = "-module"
+libmailcheck_la_LDFLAGS = "-module -avoid-version"
 
 libmailcheck_la_SOURCES = \
 mailcheck.c
