Add missing files to Makefile
(Old svn revision: 3561)

--- a/doc/html/Makefile.am
+++ b/doc/html/Makefile.am
@@ -6,7 +6,7 @@ GPL.html \
 index.html \
 ln-legalnotice.html \
 panel-getting-started.html \
-panel-prefs.html \
+settings.html \
 panel-use.html 
 
 html:
