--- a/doc/html/Makefile.in
+++ b/doc/html/Makefile.in
@@ -164,7 +164,7 @@ GPL.html \
 index.html \
 ln-legalnotice.html \
 panel-getting-started.html \
-panel-prefs.html \
+settings.html \
 panel-use.html 
 
 subdir = doc/html
