--- a/icons/Makefile.in
+++ b/icons/Makefile.in
@@ -161,8 +161,7 @@ icondir = $(pkgdatadir)/icons
 icon_DATA = \
 diag_icon.xpm \
 menu_icon.xpm \
-xfce_icon.xpm \
-xfce_slogan.xpm
+xfce_icon.xpm 
 
 
 EXTRA_DIST = $(icon_DATA)
