--- a/panel/Makefile.in
+++ b/panel/Makefile.in
@@ -167,8 +167,6 @@ groups.c \
 groups.h \
 icons.c \
 icons.h \
-info.c \
-info.h \
 item.c \
 item.h \
 item_dialog.c \
@@ -213,10 +211,10 @@ PROGRAMS = $(bin_PROGRAMS)
 am_xfce4_panel_OBJECTS = xfce4_panel-controls.$(OBJEXT) \
 	xfce4_panel-controls_dialog.$(OBJEXT) \
 	xfce4_panel-groups.$(OBJEXT) xfce4_panel-icons.$(OBJEXT) \
-	xfce4_panel-info.$(OBJEXT) xfce4_panel-item.$(OBJEXT) \
-	xfce4_panel-item_dialog.$(OBJEXT) xfce4_panel-main.$(OBJEXT) \
-	xfce4_panel-mcs_client.$(OBJEXT) xfce4_panel-panel.$(OBJEXT) \
-	xfce4_panel-popup.$(OBJEXT) xfce4_panel-settings.$(OBJEXT) \
+	xfce4_panel-item.$(OBJEXT) xfce4_panel-item_dialog.$(OBJEXT) \
+	xfce4_panel-main.$(OBJEXT) xfce4_panel-mcs_client.$(OBJEXT) \
+	xfce4_panel-panel.$(OBJEXT) xfce4_panel-popup.$(OBJEXT) \
+	xfce4_panel-settings.$(OBJEXT) \
 	xfce4_panel-xfce_support.$(OBJEXT)
 xfce4_panel_OBJECTS = $(am_xfce4_panel_OBJECTS)
 xfce4_panel_DEPENDENCIES =
@@ -229,7 +227,6 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/xfce4_panel-controls_dialog.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/xfce4_panel-groups.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/xfce4_panel-icons.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/xfce4_panel-info.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/xfce4_panel-item.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/xfce4_panel-item_dialog.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/xfce4_panel-main.Po \
@@ -303,7 +300,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4_panel-controls_dialog.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4_panel-groups.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4_panel-icons.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4_panel-info.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4_panel-item.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4_panel-item_dialog.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/xfce4_panel-main.Po@am__quote@
@@ -480,39 +476,6 @@ xfce4_panel-icons.lo: icons.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	depfile='$(DEPDIR)/xfce4_panel-icons.Plo' tmpdepfile='$(DEPDIR)/xfce4_panel-icons.TPlo' @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_panel_CFLAGS) $(CFLAGS) -c -o xfce4_panel-icons.lo `test -f 'icons.c' || echo '$(srcdir)/'`icons.c
-
-xfce4_panel-info.o: info.c
-@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_panel_CFLAGS) $(CFLAGS) -MT xfce4_panel-info.o -MD -MP -MF "$(DEPDIR)/xfce4_panel-info.Tpo" \
-@am__fastdepCC_TRUE@	  -c -o xfce4_panel-info.o `test -f 'info.c' || echo '$(srcdir)/'`info.c; \
-@am__fastdepCC_TRUE@	then mv "$(DEPDIR)/xfce4_panel-info.Tpo" "$(DEPDIR)/xfce4_panel-info.Po"; \
-@am__fastdepCC_TRUE@	else rm -f "$(DEPDIR)/xfce4_panel-info.Tpo"; exit 1; \
-@am__fastdepCC_TRUE@	fi
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='info.c' object='xfce4_panel-info.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	depfile='$(DEPDIR)/xfce4_panel-info.Po' tmpdepfile='$(DEPDIR)/xfce4_panel-info.TPo' @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_panel_CFLAGS) $(CFLAGS) -c -o xfce4_panel-info.o `test -f 'info.c' || echo '$(srcdir)/'`info.c
-
-xfce4_panel-info.obj: info.c
-@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_panel_CFLAGS) $(CFLAGS) -MT xfce4_panel-info.obj -MD -MP -MF "$(DEPDIR)/xfce4_panel-info.Tpo" \
-@am__fastdepCC_TRUE@	  -c -o xfce4_panel-info.obj `if test -f 'info.c'; then $(CYGPATH_W) 'info.c'; else $(CYGPATH_W) '$(srcdir)/info.c'; fi`; \
-@am__fastdepCC_TRUE@	then mv "$(DEPDIR)/xfce4_panel-info.Tpo" "$(DEPDIR)/xfce4_panel-info.Po"; \
-@am__fastdepCC_TRUE@	else rm -f "$(DEPDIR)/xfce4_panel-info.Tpo"; exit 1; \
-@am__fastdepCC_TRUE@	fi
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='info.c' object='xfce4_panel-info.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	depfile='$(DEPDIR)/xfce4_panel-info.Po' tmpdepfile='$(DEPDIR)/xfce4_panel-info.TPo' @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_panel_CFLAGS) $(CFLAGS) -c -o xfce4_panel-info.obj `if test -f 'info.c'; then $(CYGPATH_W) 'info.c'; else $(CYGPATH_W) '$(srcdir)/info.c'; fi`
-
-xfce4_panel-info.lo: info.c
-@am__fastdepCC_TRUE@	if $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_panel_CFLAGS) $(CFLAGS) -MT xfce4_panel-info.lo -MD -MP -MF "$(DEPDIR)/xfce4_panel-info.Tpo" \
-@am__fastdepCC_TRUE@	  -c -o xfce4_panel-info.lo `test -f 'info.c' || echo '$(srcdir)/'`info.c; \
-@am__fastdepCC_TRUE@	then mv "$(DEPDIR)/xfce4_panel-info.Tpo" "$(DEPDIR)/xfce4_panel-info.Plo"; \
-@am__fastdepCC_TRUE@	else rm -f "$(DEPDIR)/xfce4_panel-info.Tpo"; exit 1; \
-@am__fastdepCC_TRUE@	fi
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='info.c' object='xfce4_panel-info.lo' libtool=yes @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	depfile='$(DEPDIR)/xfce4_panel-info.Plo' tmpdepfile='$(DEPDIR)/xfce4_panel-info.TPlo' @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_panel_CFLAGS) $(CFLAGS) -c -o xfce4_panel-info.lo `test -f 'info.c' || echo '$(srcdir)/'`info.c
 
 xfce4_panel-item.o: item.c
 @am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(xfce4_panel_CFLAGS) $(CFLAGS) -MT xfce4_panel-item.o -MD -MP -MF "$(DEPDIR)/xfce4_panel-item.Tpo" \
