--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -5,7 +5,6 @@ panel/controls.c
 panel/controls_dialog.c
 panel/groups.c
 panel/icons.c
-panel/info.c
 panel/item.c
 panel/item_dialog.c
 panel/main.c
@@ -22,6 +21,7 @@ settings/xfce_settings_plugin.c
 # plugins
 plugins/clock/clock.c
 plugins/mailcheck/mailcheck.c
+plugins/pager/pager.c
 plugins/switcher/switcher.c
 plugins/systembuttons/systembuttons.c
 
