Actually install doc images ...
(Old svn revision: 3567)

--- a/doc/images/Makefile.am
+++ b/doc/images/Makefile.am
@@ -1,4 +1,14 @@
 EXTRA_DIST = $(images_DATA)
 imagesdir = $(pkgdatadir)/doc/images
 images_DATA = \
-default_panel.png
+clock-properties.png \
+default_panel.png \
+handle-popup.png \
+item-popup.png \
+launcher-properties.png \
+mailcheck-properties.png \
+menuitem-properties.png \
+nooptions-properties.png \
+panel-settings.png \
+systembuttons-properties.png
+
