--- a/doc/images/Makefile.in
+++ b/doc/images/Makefile.in
@@ -159,7 +159,16 @@ target_alias = @target_alias@
 EXTRA_DIST = $(images_DATA)
 imagesdir = $(pkgdatadir)/doc/images
 images_DATA = \
-default_panel.png
+clock-properties.png \
+default_panel.png \
+handle-popup.png \
+item-popup.png \
+launcher-properties.png \
+mailcheck-properties.png \
+menuitem-properties.png \
+nooptions-properties.png \
+panel-settings.png \
+systembuttons-properties.png
 
 subdir = doc/images
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
