Fixed type "xfhelp" -> "xfhelp4"
(Old svn revision: 3582)

--- a/example.xfce4rc.in
+++ b/example.xfce4rc.in
@@ -113,7 +113,7 @@
     <Group>
       <Popup/>
       <Control id="-2">
-        <Command term="0">xfhelp</Command>
+        <Command term="0">xfhelp4</Command>
         <Tooltip>Manual</Tooltip>
         <Icon id="5"/>
       </Control>
