Use xfprint-manager in the panel.
(Old svn revision: 3588)

--- a/example.xfce4rc.in
+++ b/example.xfce4rc.in
@@ -105,7 +105,7 @@
     <Group>
       <Popup/>
       <Control id="-2">
-        <Command term="0">lpr</Command>
+        <Command term="0">xfprint-manager</Command>
         <Tooltip>Drag file to print</Tooltip>
         <Icon id="9"/>
       </Control>
